syntax = "proto3";

package kamereo.interview.order;

option java_package = "vn.kamereo.interview.order";
option java_multiple_files = true;

message OrderItem {
    string product_id = 1;
    int64 price = 2;
    int32 quantity = 3;
}

enum OrderStatus {
    INVALID = 0;
    PENDING = 1;
    ACCEPTED = 2;
    CANCELED = 3;
    RECEIVED = 4;
}

message Order {
    string order_id = 1;
    string user_id = 2;

    repeated OrderItem order_items = 3;
    OrderStatus status = 4;
}
